--- a/backend/wp-content/themes/rschip/src/components/productSlider/productSliderRs.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/productSlider/productSliderRs.component.pug
@@ -1,59 +1,31 @@
-section.productSlider
-    button.page__btn.page__btn_notTransparent DOWLOAD THE GUIDE
-    .wrapper 
-        h2.page__title-h2_small easy and fast
-        h3.page__title-h3 Throttle response with no delay 
-        .productSliderFlexContainer 
-            .productSliderGallary
-                .productSliderGallary__Main.gallery-top
-                    .swiper-wrapper
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgRsChipSliderMain.png", alt="productSliderGallary")
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgRsChipSliderMain.png", alt="productSliderGallary")
-                
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgRsChipSliderMain.png", alt="productSliderGallary")
-                
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgRsChipSliderMain.png", alt="productSliderGallary")
-                
-                    
-                .productSliderGallary__Thumbnails.gallery-thumbs
-                    .swiper-wrapper
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgChipSlidermin.png", alt="productSliderGallary")
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgChipSlidermin.png", alt="productSliderGallary")
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgChipSlidermin.png", alt="productSliderGallary")
-                        .swiper-slide
-                            img(src="assets/images/png/products/imgChipSlidermin.png", alt="productSliderGallary")
-            
-            .productSliderAdvantages
-                .productSliderAdvantagesItem 
-                    .productSliderAdvantagesItemIcon.svg-iconSpeedometerGray.svg-iconSpeedometerGray-box
-                    p Better driving dynamic
-                .productSliderAdvantagesItem 
-                    .productSliderAdvantagesItemIcon.svg-iconWheel.svg-iconWheel-box
-                    p Backup CPU
-
-                .productSliderAdvantagesItem 
-                    .productSliderAdvantagesItemIcon.svg-iconChipGray.svg-iconChipGray-box
-                    p Five driving modes
-                .productSliderAdvantagesItem 
-                    .productSliderAdvantagesItemIcon.svg-iconPinion.svg-iconPinion-box
-                    p No lag or delay
-
-                .productSliderAdvantagesItem 
-                    .productSliderAdvantagesItemIcon.svg-iconRudder.svg-iconRudder-box
-                    p Easy to install
-                .productSliderAdvantagesItem 
-                    .productSliderAdvantagesItemIcon.svg-iconHybrEng.svg-iconHybrEng-box
-                    p ICE, BEV and hybrid engines
-
-                .productSliderPrice 
-                    button.page__btn ADD TO BAG
-                    .productPrice__cost $299
-                .productSliderText *Real world gains may be less or more depending on a large number of contributing factors such as displacement, aspiration and selected tuning mode.
-
+include ./productSlider.mixin.pug
++productSlider({
+    imageName: "imgRsChipSliderMain",
+    thumbs: "imgChipSlidermin",
+    advantages: [
+        {
+            iconName: 'iconSpeedometerGray',
+            text: 'Better driving dynamic'
+        },
+        {
+            iconName: 'iconChipGray',
+            text: 'Backup CPU'
+        },
+        {
+            iconName: 'iconRudder',
+            text: 'Five driving modes'
+        },
+        {
+            iconName: 'iconWheel',
+            text: 'No lag or delay'
+        },
+        {
+            iconName: 'iconPinion',
+            text: 'Easy to install'
+        },
+        {
+            iconName: 'iconHybrEng',
+            text: 'ICE, BEV and hybrid engines'
+        },
+    ]
+})
