--- a/backend/wp-content/themes/rschip/src/pug/templates/template.pug
+++ b/backend/wp-content/themes/rschip/src/pug/templates/template.pug
@@ -81,4 +81,5 @@ html(lang="en" data-scroll='0')
             script(src="js/select/select.component.js")
             script(src="js/productSlider/productSlider.component.js")
             script(src="js/cartProducts/cartProducts.component.js")
+            script(src="js/performance/performance.component.js")
             
