--- a/backend/wp-content/themes/rschip/css/styles-calc.css
+++ b/backend/wp-content/themes/rschip/css/styles-calc.css
@@ -4504,6 +4504,10 @@ html:not([data-scroll='0']) .header {
   width: 0;
 }
 
+.pageTitle {
+  padding-top: 100px;
+}
+
 .page {
   overflow: hidden;
 }
