--- a/backend/wp-content/themes/rschip/src/pages/faq/faq.pug
+++ b/backend/wp-content/themes/rschip/src/pages/faq/faq.pug
@@ -10,10 +10,11 @@ block append style
 
 block content
 	main.page.pageFaq
-		.wrapper
-			h2.page__title-h2.page__title-h2_big SUPPORT 
-				span.page__title-h2_small.page__title-h2_absolute Find Answers
-				span FAQ
+		section.pageTitle
+			.wrapper
+				h2.page__title-h2.page__title-h2_big SUPPORT 
+					span.page__title-h2_small.page__title-h2_absolute Find Answers
+					span FAQ
 		include ../../components/faq/faqBig.component.pug
 		include ../../components/usEmail/usEmail.component.pug
 		include ../../components/form/form.component.pug
