--- a/backend/wp-content/themes/rschip/src/components/contacts/contacts.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/contacts/contacts.component.pug
@@ -1,10 +1,12 @@
 //-contacts
-section.contacts 
-    .wrapper
-        h2.page__title-h2.page__title-h2_big WELLCOME 
-            span.page__title-h2_small.page__title-h2_absolute Get in touch 
-        h2 Contact Us
-        include ../contactCards/contactCards.component.pug
+section.contacts
+    include ../title/title.mixin.pug
+    +title({
+        titleBig: "WELLCOME",
+        titleAbsolute: "Get in touch",
+        titleH2: "Contact Us"
+    })
+    include ../contactCards/contactCards.component.pug
 include ../form/form.component.pug
 include ../map/map.component.pug
 include ../social/social.component.pug
