added components & styles

--- a/backend/wp-content/themes/rschip/src/components/select/select.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/select/select.component.sass
@@ -261,7 +261,9 @@
         // min-height: 88px
         max-height: 70%
         // max-height: 200px
-        overflow: scroll
+        overflow-y: scroll
+        scrollbar-color: #ff3a3a #fff
+        scrollbar-width: thin
 
         padding: 0
         list-style: none
