--- a/backend/wp-content/themes/rschip/src/sass/base/base.sass
+++ b/backend/wp-content/themes/rschip/src/sass/base/base.sass
@@ -27,7 +27,7 @@
   +font($SFUIText, #{$SFUIText}-Bold)
 
 html
-  scrollbar-color: #ff3a3a #fff
+  scrollbar-color: #ff3a3a #000
   scrollbar-width: thin
 
 body
