--- a/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
+++ b/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
@@ -147,7 +147,8 @@
             background: linear-gradient(45deg,#700ED2,#FF3838) border-box
     &__from
         margin: 0
-    &__input
+    &__input,
+    input
         font-family: #{$SFUIText}-Regular
         font-style: normal
         font-weight: normal
@@ -165,7 +166,8 @@
         &::placeholder
             color: #fff
 
-    &__textarea
+    &__textarea,
+    textarea
         font-family: #{$SFUIText}-Regular
         font-style: normal
         font-weight: normal
