--- a/backend/wp-content/themes/rschip/src/sass/blocks/pageCart.sass
+++ b/backend/wp-content/themes/rschip/src/sass/blocks/pageCart.sass
@@ -1,4 +1,10 @@
+.pageCheckout
+    padding: 100px 0
+    .pageCartTitle
+        margin-bottom: 5%
 //- pageCart
+
+
 .pageCart
     padding: 100px 0
 
@@ -32,5 +38,3 @@
 .cartTable
     +row-flex
     padding: 7% 0
-
-
