--- a/backend/wp-content/themes/rschip/src/components/faq/faq.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/faq/faq.component.sass
@@ -79,7 +79,7 @@
         // display: none
         height: 0
         opacity: 0
-        // visibility: hidden
+        visibility: hidden
         font-size: 15px
         line-height: 26px
 
