--- a/backend/wp-content/themes/rschip/src/components/modals/modal.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/modals/modal.component.sass
@@ -101,7 +101,10 @@
         margin: 0
 
 .modalContent
-    overflow: scroll
+    overflow-y: scroll
+    scrollbar-color: #ff3a3a #fff
+    scrollbar-width: thin
+
     height: inherit
     margin: 0 -10px
     img
