--- a/backend/wp-content/themes/rschip/src/components/modals/modalCarTahankyou.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/modals/modalCarTahankyou.component.pug
@@ -1,1 +1,6 @@
 //-modals
++modal("modalCarTahankyou")
+    h2.modalTitle Thank you 
+        span.page_red for your purchase!
+    p Your order is beeing processed. You will recevie a notification on your email, once the package is dispatched,
+    button.page__btn Ok
