--- a/backend/wp-content/themes/rschip/src/components/select/select.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/select/select.component.sass
@@ -1,7 +1,9 @@
 /*select*/
 .selectBox
     width: 100%
-
+    &.noSelected
+        .selectBoxContainer
+            border-color: #ff3a3a 
 .selectBoxText
     display: none
     font-family: #{$SFUIText}-Regular
