--- a/backend/wp-content/themes/rschip/src/components/addToCart/addToCart.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/addToCart/addToCart.component.pug
@@ -1,5 +1,5 @@
 //-addToCart
-section.addToCart
+section.addToCart.hidden
     .wrapper 
         .addToCartContainer 
             div Free shipping
