--- a/backend/wp-content/themes/rschip/src/components/chat/chat.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/chat/chat.component.sass
@@ -1,6 +1,6 @@
 /*chat*/
 .chat
-    display: none
+    // display: none
     position: fixed
     right: 60px
     bottom: 60px
@@ -48,6 +48,10 @@
     font-size: 15px
     line-height: 26px
     transition: opacity .5s ease
+    text-align: center
+    z-index: 100
+    display: none
+
     .email
         color: #000
     .phone
@@ -55,10 +59,12 @@
     &.active
         transform: scale(1)
         opacity: 1
+        display: block
         
 .chatItems
     width: 50%
     margin: 0 auto 30px
+    text-align: left
 .chatItem
     display: flex
     align-items: center
