--- a/backend/wp-content/themes/rschip/src/components/select/select.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/select/select.component.sass
@@ -1,5 +1,8 @@
+.cartShopSelect
+    margin: 3% 0
 /*select*/
 .selectBox
+    position: relative
     width: 100%
     &.noSelected
         .selectBoxContainer
