--- a/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
+++ b/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
@@ -190,4 +190,19 @@
         color: transparent
         background-image: linear-gradient(to right, #FF4587 , #FF5438)
         background-clip: text
+
+    &__link
+
+        font-family: #{$SFUIText}-Regular
+        color: transparent
+        font-style: normal
+        font-weight: bold
+        text-transform: capitalize
+
+        font-size: 15px
+        line-height: 100%
+        background-image: linear-gradient(to right, #FF4587 , #FF5438)
+        background-clip: text
+        border: none
+
 /* __page__ */
